--- a/Handwritten_Recognition(SVM).ipynb
+++ b/Handwritten_Recognition(SVM).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPOgC4NXU2z33f/EhkWTR/W",
+      "authorship_tag": "ABX9TyPRPX6JEfikuHSy+BdNstHH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,12 +91,12 @@
       "source": [
         "from random import randint\n",
         "import time\n",
-        "#from google.colab import output #uncomment if running on google collab notebook\n",
+        "from google.colab import output\n",
         "for i in range(10):\n",
         "  number = randint(0, len(digits.images))\n",
         "  predict(number)\n",
         "  time.sleep(2.5)\n",
-        "#  output.clear() #uncomment if running on google collab notebook"
+        "  output.clear()"
       ],
       "metadata": {
         "id": "OnTAl1tUgVG7"
